# FinanceBench-RAG-Lab

./: .env  .env.example  .gitignore  Readme.md  pyproject.toml  setup.sh
data/eval/: smoke_20.jsonl  smoke_50.jsonl
eval_results/: day1_smoke.json  day2_smoke_50.json
qdrant_storage/: raft_state.json
scripts/: build_index.py  build_index_extended.py  checkpoint_indexing.py  delete_doc_index.py  run_chunker_sweep.py  run_generation_eval.py  run_smoke_eval_20.py  run_smoke_eval_50.py
scripts/day4/: _eval_helpers.py  compare.py  run_baseline.py  run_decomposition.py  run_hyde.py  run_rag_fusion.py
src/rag_hub/agents/: README.md
src/rag_hub/chunking/: README.md  dense_x.py  parent_child.py  raptor.py  recursive.py  section_aware.py  semantic.py
src/rag_hub/embeddings/: README.md  gemini_001.py  test_gemini_embed_dim.py
src/rag_hub/eval/: README.md  financebench.py  metrics.py  retrieval_metrics.py
src/rag_hub/generation/: README.md  gemini_LLM.py
src/rag_hub/indexing/: index_builder.py
src/rag_hub/loaders/: README.md  pdf_loader.py
src/rag_hub/multimodal/: README.md
src/rag_hub/query/: README.md  __init__.py  base.py  decomposition.py  hyde.py  multi_query.py  rag_fusion.py  step_back.py
src/rag_hub/retrievers/: README.md  bm25_retriever.py  hybrid_retriever.py
src/rag_hub/routing/: README.md
src/rag_hub/tools/: README.md
src/rag_hub/vectorstore/: README.md  qdrant_store.py
tests/eval/: test_retrieval_metrics.py
